--- a/collection.html
+++ b/collection.html
@@ -20,7 +20,7 @@
        </nav>
 
        <section class="album-covers container clearfix">
-           <div class="collection-album-container column fourth">
+           <!--<div class="collection-album-container column fourth">
                <img src="assets/images/album_covers/01.png"/>
                <div class="collection-album-info caption">
                    <p>
@@ -71,7 +71,8 @@
                        <br/>
                    </p>
                </div>
-           </div>
+           </div>-->
        </section>
+       <script src="scripts/collection.js"></script>
      </body>
  </html>
